--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,17 +13,23 @@ nav .nav-wrapper a{
 .caja-tareas{
     width: 100%;
     height: 500px;
-    background-color: #E6E6E6;
+    background-image: url(../img/andyone-26591.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: black;
 }
 
 .todo-caja{
-    background-color: whitesmoke;
-	box-shadow: -3px 6px 21px #888888;
+    background-color: rgba(195, 190, 190, 0.72);
+    position: relative;
+    top: 60px;
+
 }
 
 .caja-tareas .todo-caja .input-box{
-    border: solid 5px #c9c9c9;
+    border: solid 5px #464444;
     width: 95%;
     margin-left: 2%;
     margin-top: 10px;
